--- a/scss/layouts/_nosotros.scss
+++ b/scss/layouts/_nosotros.scss
@@ -1,23 +1,21 @@
 .nosotross{
-    color: #051D43;
+    color: $main-color;
     }
     
     .quienessomos{
     display: flex;
     align-items: center;
     gap: 20px;
-    }
-    
-    .quienessomos img{
+    &img{
     width: 50%;
     height: 250px;
     object-fit: cover;
+    p{
+        width: 50%;
+        text-align:justify;
+        color:$main-color;
     }
-    
-    .quienessomos p{
-    width: 50%;
-    text-align:justify;
-    color:#051D43;
+    }
     }
     
     .mision{
@@ -30,21 +28,20 @@
     width: 50%;
     height: 250px;
     object-fit: cover;
-    }
-    
-    .mision p{
+    &p{
     width: 50%;
     text-align:justify;
-    color:#051D43;
+    color:$main-color;
     }
-    
+    }
+
     .textonosotros{
     padding-bottom: 60px;
     }
     
     .textoconfian{
     padding-bottom: 60px;
-    color:#051D43;
+    color:$main-color;
     }
     
     #confian{
@@ -53,7 +50,7 @@
     grid-template-columns: 250px 250px 250px;
     grid-template-rows: 250px 250px 250px;
     justify-content: center;
-    border: 2px solid #051D43;
+    border: 2px solid $main-color;
     padding: 20px;
     }
     
@@ -70,15 +67,13 @@
     width: 100%;
     height: 100%;
     display: flex;
-    border: 1px solid #051D43;
+    border: 1px solid $main-color;
     border-radius: 1px;
     overflow:auto;
     justify-content: center;
     align-items: center;
     gap: 30px;
-    }
-    
-    .logoss img {
+    &img {
     width: 50%;
     height:fit-content;
     display: flex;
@@ -87,7 +82,8 @@
     align-content: center;
     justify-content: space-around;
     }
-    
+    }
+
     @media only screen and (max-width:480px){
     .quienessomos{
     display:inline;
@@ -95,20 +91,18 @@
     height: auto;
     padding-left: 0%;
     justify-content: center;
-    }
-    
-    .quienessomos img{
+    &img{
     width: 100%;
     height: 100%;
     padding-left: 0%;
     justify-content: center;
     align-items: center;
+    p{
+        width: 100%;
+        margin: 0%;
+        text-align:center;
     }
-    
-    .quienessomos p{
-    width: 100%;
-    margin: 0%;
-    text-align:center;
+    }
     }
     
     .mision{
@@ -117,20 +111,19 @@
     height: auto;
     padding-left: 100px;
     justify-content: center;
-    }
-    
-    .mision img{
+    &img{
     width: 100%;
     height: 200px;
     justify-content: center;
     align-items: center;
+    p{
+        width: 100%;
+        margin: 0%;
+        text-align: center;
+    }
+    }
     }
     
-    .mision p{
-    width: 100%;
-    margin: 0%;
-    text-align: center;
-    }
     
     .textonosotros{
     padding-bottom: 0;
@@ -149,6 +142,5 @@
     padding: 0%;
     justify-content: center;
     }
-    
     }
     
