--- a/scss/layouts/_servicios.scss
+++ b/scss/layouts/_servicios.scss
@@ -1,42 +1,40 @@
-.servicioss{
-    color: #051D43;
+    .servicioss{
+    color: $main-color;
     }
     
     .cctv{
     display: flex;
     align-items: center;
     gap: 20px;
-    }
     
-    .cctv img{
+    &img{
     width: 50%;
     height: 250px;
     object-fit: cover;
     padding-left: 20px;
-    }
-    
-    .cctv p{
+    p{
     width: 50%;
     text-align:justify;
-    color:#051D43;
+    color:$main-color;
     }
-    
+    }
+    }
+
     .alarmas{
     display: flex;
     align-items: center;
     gap: 20px;
-    }
     
-    .alarmas img{
+    &img{
     width: 46%;
     height: 250px;
     object-fit: cover;
+    p{
+        width: 50%;
+        text-align:justify;
+        color:$main-color;
     }
-    
-    .alarmas p{
-    width: 50%;
-    text-align:justify;
-    color:#051D43;
+    }
     }
     
     .cercos{
@@ -44,19 +42,18 @@
     align-items: center;
     gap: 20px;
     margin-bottom: 70px;
-    }
     
-    .cercos img{
+    &img{
     width: 50%;
     height: 250px;
     object-fit: cover;
     padding-left: 20px;
+    p{
+        width: 50%;
+        text-align:justify;
+        color:$main-color;
     }
-    
-    .cercos p{
-    width: 50%;
-    text-align:justify;
-    color:#051D43;
+    }
     }
     
     @media only screen and (max-width:480px){
@@ -66,21 +63,22 @@
     height: auto;
     padding-left: 0%;
     justify-content: center;
-    }
     
-    .cctv img{
+    &img{
     width: 100%;
     height: 100%;
     padding-left: 0%;
     justify-content: center;
     align-items: center;
+    p{
+        width: 100%;
+        margin: 0%;
+        text-align:center;
     }
+    }
+    }
+}
     
-    .cctv p{
-    width: 100%;
-    margin: 0%;
-    text-align:center;
-    }
     
     .alarmas{
     display:inline;
@@ -88,20 +86,19 @@
     height: auto;
     padding-left: 100px;
     justify-content: center;
-    }
-    
-    .alarmas img{
+        &img{
     width: 100%;
     height: 200px;
     justify-content: center;
     align-items: center;
+    p{
+        width: 100%;
+        margin: 0%;
+        text-align: center;
+    }
+    }
     }
     
-    .alarmas p{
-    width: 100%;
-    margin: 0%;
-    text-align: center;
-    }
     
     .cercos{
     display:inline;
@@ -109,19 +106,16 @@
     height: auto;
     padding-left: 0%;
     justify-content: center;
-    }
-    
-    .cercos img{
+    &img{
     width: 100%;
     height: 200px;
     justify-content: center;
     align-items: center;
+    p{
+        width: 100%;
+        margin: 0%;
+        text-align: center;
+        padding-bottom: 50px;
     }
-    
-    .cercos p{
-    width: 100%;
-    margin: 0%;
-    text-align: center;
-    padding-bottom: 50px;
     }
     }
